@@ -18,7 +18,7 @@
 .\"	along with this program; if not, write to the Free Software
 .\"	Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 .\"
-.TH \f3ad\f1 1 "August 1, 2015" "PJL TOOLS"
+.TH \f3ad\f1 1 "August 3, 2015" "PJL TOOLS"
 .SH NAME
 ad \- ASCII dump
 .SH SYNOPSIS
@@ -297,7 +297,7 @@ or
 .BR \-r ,
 parses offset in decimal.
 .TP
-.B \-\-help
+.BR \-\-help " | " \-H
 Prints a help message
 to standard error
 and exits.
